fixed some profile issues on mobile

--- a/assets/css/animations.scss
+++ b/assets/css/animations.scss
@@ -25,7 +25,7 @@
 
 @keyframes fadeIn {
     0% { opacity: 0; }
-    25% { opacity: 0; }
+    15% { opacity: 0; }
     100% { opacity: 1; }
 }
 
