--- a/assets/css/profiles.scss
+++ b/assets/css/profiles.scss
@@ -129,6 +129,7 @@
             font-size: 18px;
             position: sticky;
             top: 100%;
+            white-space: nowrap;
         }
     }
 }
@@ -142,7 +143,10 @@
         grid-template-columns: 0.4fr;
 
         img {
-            height: 629.9px;
+            min-width: 100px;
+            width: 100vw;
+            height: auto;
+            min-height: auto;
         }
 
         .profile_text {
@@ -161,7 +165,8 @@
                     height: 0.28vw;
                     opacity: 0.7;
                     margin-top: auto;
-                    margin-bottom: 1.61vw;
+                    margin-bottom: 1.8vw;
+                    right: 3vw;
                 }
     
                 .hr {
